[project]
name = "beeper-mcp"
version = "0.1.0"
description = "a mcp server for interacting with chain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "dotenv>=0.9.9",
 "eth-account>=0.13.5",
 "mcp[cli]>=1.4.1",
 "pytest>=8.3.5",
 "python-dotenv>=1.0.1",
 "web3>=7.9.0",
 "pyyaml>=6.0.1",
]
[[project.authors]]
name = "stopWarByWar"
email = "nindelaofuqin@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
beeper-mcp = "beeper_mcp:main"
